idf_component_register(SRCS "main.cpp"
                            "daemon/battery_level.cpp"
                            "daemon/read_inputs.cpp"
                            "daemon/config_pins.cpp"
                            "helpers/helpers.cpp"
                           
                           
                           
                    INCLUDE_DIRS "."
                                "constants"
                                "daemon" 
                                "helpers"
                                 )


